unpackaged/main/default/objects/Shipping_Label__c/Shipping_Label__c.object-meta.xml
<CustomObject>
    <label>Shipping Label</label>
    <nameField>
        <label>Shipping Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>