unpackaged/main/default/objects/Shipping_Label__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <label>Attention</label>
    <length>80</length>
    <type>Text</type>
</CustomField>