unpackaged/main/default/objects/Shipping_Label__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipping Labels</relationshipLabel>
    <relationshipName>Shipping_Labels</relationshipName>
    <type>Lookup</type>
</CustomField>