unpackaged/main/default/objects/Shipping_Label__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Custom Label Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>