unpackaged/main/default/objects/Shipping_Label__c/fields/Country_State_ISO__c.field-meta.xml
<CustomField>
    <fullName>Country_State_ISO__c</fullName>
    <formula>Shipping_Country_ISO__c  &amp; &quot;-&quot; &amp;  Shipping_State_ISO__c</formula>
    <label>Country / State ISO</label>
    <type>Text</type>
</CustomField>