unpackaged/main/default/objects/Shipping_Label__c/fields/Production_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Production_System_Id__c</fullName>
    <description>This is used for integration / data aligning with the external production System.</description>
    <externalId>true</externalId>
    <label>Production System Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>