unpackaged/main/default/objects/Shipping_Label__c/fields/Shipping_Address_One_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_One_Line__c</fullName>
    <formula>SUBSTITUTE( Shipping_Street__c ,SUBSTITUTE($Label.lineBreak, &quot;-&quot;, &quot;&quot;),&quot;, &quot;) &amp;&quot;, &quot; &amp;  Shipping_City__c &amp; &quot;, &quot; &amp;  Shipping_State__c &amp; &quot;, &quot; &amp;  Shipping_Country__c &amp; &quot; &quot; &amp;  Shipping_Postal__c  &amp; &quot;, Phone: &quot; &amp; Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address One Line</label>
    <type>Text</type>
</CustomField>