unpackaged/main/default/objects/Shipping_Label__c/fields/Shipping_Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_ISO__c</fullName>
    <label>Shipping Country (ISO)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>