unpackaged/main/default/objects/Shipping_Label__c/fields/Shipping_Label_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label_Id_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Label Id (18)</label>
    <type>Text</type>
</CustomField>