unpackaged/main/default/objects/Shipping_Label__c/fields/Shipping_Postal__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal__c</fullName>
    <label>Shipping Postal</label>
    <length>16</length>
    <type>Text</type>
</CustomField>