unpackaged/main/default/objects/Shipping_Label__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>