unpackaged/main/default/objects/Shipping_Label__c/fields/Shipping_Street_No_Line_Breaks__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_No_Line_Breaks__c</fullName>
    <formula>SUBSTITUTE( Shipping_Street__c ,SUBSTITUTE($Label.lineBreak, &quot;-&quot;, &quot;&quot;),&quot;, &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Street No Line Breaks (Code)</label>
    <type>Text</type>
</CustomField>