unpackaged/main/default/objects/Shipping_Label__c/fields/WinM__c.field-meta.xml
<CustomField>
    <fullName>WinM__c</fullName>
    <label>WinM Member Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>