unpackaged/main/default/objects/Shipping_Label__c/fields/WinM_Shipping_ID__c.field-meta.xml
<CustomField>
    <fullName>WinM_Shipping_ID__c</fullName>
    <label>WinM Shipping ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>