unpackaged/main/default/objects/Shipping_Label__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>WinM_Shipping_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Attention__c</columns>
    <columns>Contact__c</columns>
    <columns>Country_State_ISO__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>